--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rakib</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
+
 </head>
-<body>
-    
+<body class="font.inter" >
+    <header>
+        <nav>
+ 
+                <div class="nav-pic"> <img src="image/logo-navbar.png" alt=""></div>
+                    <ul class="manu">
+                        <li><a href="">Features</a></li>
+                        <li><a href="">How It Works</a></li>
+                        <li><a href="">Why It's Different</a></li>
+                        
+                    </ul>
+                    <button class="btn">Get Early Access</button>
+
+        </nav>
+    </header>
 </body>
 </html>
