--- a/index.html
+++ b/index.html
@@ -74,6 +74,29 @@ help you think clearly, connect ideas, and turn learning into long-term knowledg
 
         </section>
 
+        <section class="light-main">
+
+            <div class="light">
+                <img src="image/knowledge.png" alt="">
+            </div>
+
+            <div class="pera">
+            <div>
+                <h1>The Solution</h1>
+                <h3>Your second brain,<br>structured by design.</h3>
+                <p>Personal Knowledge Vault isn't another note-taking app. z It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
+            </div>
+            <div>
+                <ul>
+                    <li><a><img src="image/CheckCircle.png" alt="">Capture ideas with structure built-in from day one</a></li>
+                    <li><a><img src="image/CheckCircle.png" alt="">Connect related concepts automatically as you write</a></li>
+                    <li><a><img src="image/CheckCircle.png" alt="">Build lasting knowledge through reflection prompts</a></li>
+                    <li><a><img src="image/CheckCircle.png" alt="">Find anything instantly with semantic search</a></li>
+                </ul>
+            </div>
+            </div>
+        </section>
+
     </header>
 </body>
 </html>
