try to compleat ready to think and get early eccess buton section

--- a/index.html
+++ b/index.html
@@ -97,6 +97,16 @@ help you think clearly, connect ideas, and turn learning into long-term knowledg
             </div>
         </section>
 
+        <section class="think">
+            <div class="tnk">
+                <h3>Ready to think more clearly?</h3>
+                <h1>Join thousands of learners who are building their personal knowledge vaults.<br> Start free, no credit card required.</h1>
+                    <button class="btn">Get Early Access</button>
+                    <h1>Free during early access • No credit card needed</h1>
+            </div>
+
+        </section>
+
     </header>
 </body>
 </html>
