--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                     <button class="btn">Get Early Access</button>
 
         </nav>
+        </header>
+        <main>
         <section class="benner">
             <div class="hero">
                 <h2>Structured thinking,<br><span style="color: #30B868;">not just note-taking.</span></h2>
@@ -106,7 +108,27 @@ help you think clearly, connect ideas, and turn learning into long-term knowledg
             </div>
 
         </section>
+    </main>
 
-    </header>
+<footer>
+    <section class="foot">
+        <div class="foot-pic">
+            <img src="image/logo-footer.png" alt=""> </div>
+
+            <div class="social"> <h3>Social Links</h3>
+        <div class="butt">
+            <button>x</button>
+            <button>i</button>
+            <button>f</button>
+        </div> 
+        </div>
+    </section>
+
+    <div class="copy-right">
+                <p>© 2026 Personal Knowledge Vault. All rights reserved.</p>
+            </div>   
+</footer>
+
+    
 </body>
 </html>
